# netbox-plugin-cupholder

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  Makefile  README.md  TESTING.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: ci.yaml  publish-pypi.yaml
.hooks/: pre-push
changelog/: index.html
contributing/: index.html
netbox_cup_holder_plugin/: __init__.py  choices.py  filtersets.py  forms.py  graphql.py  models.py  navigation.py  search.py  tables.py  template_content.py  test_configuration.py  urls.py  views.py
netbox_cup_holder_plugin/api/: __init__.py  serializers.py  urls.py  views.py
netbox_cup_holder_plugin/migrations/: 0001_initial.py  0002_cupholder_rack_mount.py  0003_cupholder_types.py  __init__.py
netbox_cup_holder_plugin/templates/netbox_cup_holder_plugin/: cupholder.html  cupholdertype.html
netbox_cup_holder_plugin/templates/netbox_cup_holder_plugin/inc/: rack_cupholders.html
netbox_cup_holder_plugin/testing/: __init__.py  utils.py
netbox_cup_holder_plugin/tests/: __init__.py  test_api.py  test_graphql.py  test_models.py  test_views.py
scripts/: ci-local.sh  validate_migration_deps.py
search/: search_index.json
testing/: configuration.py
tests/: __init__.py
